--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/adminlte.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/adminlte.min.css">
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="/css/font-awesome/all.min.css">
-    <link rel="stylesheet" href="/css/OverlayScrollbars.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/font-awesome/all.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/OverlayScrollbars.min.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
     <title>React App</title>
@@ -49,9 +49,9 @@
     -->
 
 
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/jquery.overlayScrollbars.min.js"></script>
-    <script src="/js/adminlte.js"></script>
+    <script src="%PUBLIC_URL%/js/jquery.min.js"></script>
+    <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
+    <script src="%PUBLIC_URL%/js/jquery.overlayScrollbars.min.js"></script>
+    <script src="%PUBLIC_URL%/js/adminlte.js"></script>
   </body>
   </html>
